--- a/bower.json
+++ b/bower.json
@@ -44,8 +44,6 @@
     "dist/css/baseheight.min.css.map"
   ],
   "ignore": [
-    ".travis.yml",
-    "deploy_key.enc",
-    "deploy.sh"
+    ".travis.yml
   ]
 }
