--- a/bower.json
+++ b/bower.json
@@ -19,12 +19,12 @@
     "plugin"
   ],
   "version": "1.2.2",
-  "homepage": "http://baseheight.metodiev.dev",
+  "homepage": "https://baseheight.metodiev.dev",
   "authors": [
     {
       "name": "Martin Metodiev",
       "email": "metodiev.martin@gmail.com",
-      "url": "http://metodiev.dev"
+      "url": "https://metodiev.dev"
     }
   ],
   "repository": {
