--- a/package.json
+++ b/package.json
@@ -19,26 +19,26 @@
     "plugin"
   ],
   "version": "1.3.0",
-  "homepage": "https://baseheight.metodiev.dev",
-  "demo": "https://baseheight.metodiev.dev",
+  "homepage": "https://baseheight.mev.bg",
+  "demo": "https://baseheight.mev.bg",
   "author": {
     "name": "Martin Metodiev",
-    "email": "metodiev.martin@gmail.com",
-    "url": "https://metodiev.dev"
+    "email": "martin@mev.bg",
+    "url": "https://mev.bg"
   },
   "maintainers": [
     {
       "name": "Martin Metodiev",
-      "email": "metodiev.martin@gmail.com",
-      "url": "https://metodiev.dev"
+      "email": "martin@mev.bg",
+      "url": "https://mev.bg"
     }
   ],
   "repository": {
     "type": "git",
-    "url": "git://github.com/martinmethod/baseheight.git"
+    "url": "git://github.com/mevbg/baseheight.git"
   },
   "bugs": {
-    "url": "https://github.com/martinmethod/baseheight/issues"
+    "url": "https://github.com/mevbg/baseheight/issues"
   },
   "license": "MIT",
   "dependencies": {
